--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,27 +9,39 @@
  <body>
 <div id = "app">
   <div class ="holder headline">
-    Weather Journal App
+    Travel Application
   </div>
-  <div class ="holder zip">
-    <label for="zip">Enter Zipcode here</label>
-    <input type="text" id="zip" placeholder="enter zip code here">
-  </div>
-  <div class ="holder feel">
-    <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="5" cols="50"></textarea>
-    <button id="generate" type = "submit"> Generate </button>
-  </div>
-  <div class ="holder entry">
-    <div class = "title">Most Recent Entry</div>
-   <div id = "entryHolder">
-    <div id = "date"></div> 
-   <div id = "temp"></div>
-   <div id = "content"></div>
-  </div>
-  </div>
-  </div>
-<script src="app.js" type="text/javascript"></script>
+  <!--TRIP CARD-->
+  <section id="data-card">
+    <!--LOCATIONS OF THE TRIP-->
+    <div id="data-form">
+      <div id="data-form-location">
+        <label for="location">
+          <span>Current Location</span>
+          <input type="text" id="location" placeholder="enter your current locantion">
+        </label>
+      </div>
+      <div id="data-form-destination">
+        <label for="destination">
+          <span>Destination</span>
+          <input type="text" id="destination" placeholder="enter name of country you want travel">
+        </label>
+      </div>
+      <!--TRAVELLING TIME-->
+    </div>
+  </section>
+</div>
+
+<script src="api.js" type="text/javascript"></script>
+<!-- <script>
+  //Check that service workers are supported
+  if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./service-worker.js');
+      });
+  }
+</script> -->
 
 </body>
 </html>
