--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -28,6 +28,11 @@
         </label>
       </div>
       <!--TRAVELLING TIME-->
+      <!--Search bttn-->
+      <div class="trip-form__search">
+        <span>&nbsp;</span>
+        <button id="search">Search</button>
+      </div>
     </div>
   </section>
 </div>
