--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Weather Journal</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 </head>
  <body>
 <div id = "app">
@@ -29,15 +28,13 @@
       </div>
       <!--TRAVELLING TIME-->
       <!--Search bttn-->
-      <div class="trip-form__search">
+      <div class="trip-search">
         <span>&nbsp;</span>
         <button id="search">Search</button>
       </div>
     </div>
   </section>
 </div>
-
-<script src="api.js" type="text/javascript"></script>
 <!-- <script>
   //Check that service workers are supported
   if ('serviceWorker' in navigator) {
