--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,39 +2,143 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Weather Journal</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Travel APP</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 </head>
  <body>
-<div id = "app">
-  <div class ="holder headline">
-    Travel Application
-  </div>
-  <!--TRIP CARD-->
-  <section id="data-card">
-    <!--LOCATIONS OF THE TRIP-->
-    <div id="data-form">
-      <div id="data-form-location">
-        <label for="location">
-          <span>Current Location</span>
-          <input type="text" id="location" placeholder="enter your current locantion">
-        </label>
+  <!------------------------------------------------CAROUSEL HEADER--------------------------------------------------->
+  <div class="jumbotron text-center" style="margin-bottom:0">
+    <div id="demo" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/src/client/media/images/Egypt2.jpg" alt="Los Angeles" width="1100" height="500">
+          <div class="carousel-caption">
+            <h3>Egypt</h3>
+            <p>Pyramids!</p>
+          </div>   
+        </div>
+        <div class="carousel-item">
+          <img src="/src/client/media/images/Emirates2.jpg" alt="Chicago" width="1100" height="500">
+          <div class="carousel-caption">
+            <h3>Emirates</h3>
+            <p>skyscraper building in UAE !</p>
+          </div>   
+        </div>
+        <div class="carousel-item">
+          <img src="/src/client/media/images/Newyork.jpg" alt="New York" width="1100" height="500">
+          <div class="carousel-caption">
+            <h3>New York</h3>
+            <p>Welcome to our Travel APP!</p>
+          </div>   
+        </div>
       </div>
-      <div id="data-form-destination">
-        <label for="destination">
-          <span>Destination</span>
-          <input type="text" id="destination" placeholder="enter name of country you want travel">
-        </label>
-      </div>
-      <!--TRAVELLING TIME-->
-      <!--Search bttn-->
-      <div class="trip-search">
-        <span>&nbsp;</span>
-        <button id="search">Search</button>
-      </div>
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
     </div>
-  </section>
+  </div>
+<!------------------------------------------------NAVBAR--------------------------------------------------->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="#app">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">About us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact us</a>
+      </li>   
+    </ul>
+  </div>  
+</nav>
+<!------------------------------------------------MAIN_-------------------------------------------------->
+<main >
+  <div id = "app">
+    <div class ="holder headline">
+      Travel Application
+    </div>
+    <!--TRIP CARD-->
+    <section id="data-card">
+      <!--LOCATIONS OF THE TRIP-->
+      <div class="trip-form__row">
+        <div id="data-form">
+          <div id="data-form-location">
+            <label for="location">
+              <span>Current Location</span>
+              <input type="text" id="location" placeholder="enter your current locantion">
+            </label>
+          </div>
+          <div id="data-form-destination">
+            <label for="destination">
+              <span>Destination</span>
+              <input type="text" id="destination" placeholder="enter name of country you want travel">
+            </label>
+          </div>
+      </div>
+        <!--TRAVELLING TIME-->
+        <div class="trip-form__row">
+          <div id="start-date-form">
+            <label id="start-date">
+              <span>Start Date</span>
+              <input type="date" id="start-date" name="start-date">
+            </label>
+          </div>
+          <div id="end-date-form">
+            <label id="start-date">
+              <span>End Date</span>
+              <input type="date" id="end-date" name="end-date">
+            </label>
+          </div>
+        </div>
+        <!--Search bttn-->
+        <div class="trip-search">
+          <span>&nbsp;</span>
+          <button id="search">Search</button>
+        </div>
+      </div>
+    </section>
+  </div>
+</main>
+<!------------------------------------------------FOOTER--------------------------------------------------->
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <div class="footer container">
+    <div class="copyright">Travel Planner &copy; 2019</div>
+    <ul class="social-links">
+        <li><a class="s-icon fb" target="_blank" title="Facebook" href="https://www.facebook.com/jihad.tareq.5/"></a></li>
+        <li><a class="s-icon in" target="_blank" title="Linkedin" href="https://www.linkedin.com/in/jihadtarek/"></a></li>
+        <li><a class="s-icon gh" target="_blank" title="GitHub" href="https://github.com/jihadtareq"></a></li>
+    </ul>
+ </div>
 </div>
+<!--    <div id="error-block" class="full-screen">
+    <div class="error-block__content full-screen__block">
+        <div class="full-screen__close js-popup-close">&times;</div>
+        <div class="full-screen__message js-err-message">
+        </div>
+    </div>
+</div>
+<div id="to-do-list" class="full-screen">
+    <div class="to-do-list__content full-screen__block">
+        <div class="full-screen__close js-popup-close">&times;</div>
+        <input type="text" name="to-do-list">
+        <input type="hidden" name="trip-dest-nr" value="">
+        <div class="save-to-do btn-green">Save</div> 
+    </div>
+</div> -->
 <!-- <script>
   //Check that service workers are supported
   if ('serviceWorker' in navigator) {
@@ -44,6 +148,9 @@
       });
   }
 </script> -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
