--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,4 +1,8 @@
   /* Make the image fully responsive */
+  .jumbotron{
+    padding: 0;
+
+  }
   .carousel-inner img {
     width: 100%;
     height: 50%;
