--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,14 +19,14 @@
       </ul>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/src/client/media/images/Egypt2.jpg" alt="Los Angeles" width="1100" height="500">
+          <img src="/src/client/media/images/Egypt2.jpg" alt="Egypt" width="1100" height="500">
           <div class="carousel-caption">
             <h3>Egypt</h3>
             <p>Pyramids!</p>
           </div>   
         </div>
         <div class="carousel-item">
-          <img src="/src/client/media/images/Emirates2.jpg" alt="Chicago" width="1100" height="500">
+          <img src="/src/client/media/images/Emirates2.jpg" alt="Emirates" width="1100" height="500">
           <div class="carousel-caption">
             <h3>Emirates</h3>
             <p>skyscraper building in UAE !</p>
@@ -60,13 +60,13 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact us</a>
+      </li>
+      <li class="nav-list">
+        <a class="nav-link" id="nav-list" href="#trip-list" data-nav="trip-list">All Trips</a>
       </li>   
     </ul>
   </div>  
   <div class="nav-list">
-    <ul>
-      <li class="nav-list"><a id="nav-list" href="#trip-list" data-nav="trip-list">All Trips</a></li>
-    </ul>
   </div>
 </nav>
 <!------------------------------------------------MAIN_-------------------------------------------------->
