--- a/src/client/styles/content.scss
+++ b/src/client/styles/content.scss
@@ -1,4 +1,5 @@
 input {
+   // display: flex;
     width: 100%;
     height: 40px;
     background-color: rgba($color: $color-black, $alpha: 0.5);
@@ -239,6 +240,39 @@ input {
         }
     }
 }
+//////////MOBILE RESPONSINVE///////////////
+//////////small mobile/////////////
+@media(max-width:374px){
+    input{
+        width: 170px;
+    }
+    .trip-form__row{
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+    }
+  }
+  //////////large mobile/////////////
+  @media(min-width:375px)and(max-width:465px){
+    input{
+        width: 300px;
+    }
+    .trip-form__row{
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+    }
+}
+
+///////////SMALL TABLET//////////////
+@media(min-width:466px)and(max-width:517px){
+    input{
+        width: 190px;
+    }
+
+}
+
+
 ///////////////////////////////TRIP CREATE///////////////////////////////////////
 .trip-create {
     min-height: 100vh;
