--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -2,3 +2,11 @@
   .carousel-inner img {
     width: 100%;
   }
+
+  //////////RESPONSIVE////////////
+  
+  @media only screen and (min-width:320px){
+    .carousel-inner img {
+      height:200px;
+    }
+  }
