--- a/src/client/styles/lib/lib.scss
+++ b/src/client/styles/lib/lib.scss
@@ -16,6 +16,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media only screen and (min-width:320px){
+        .trip-form__row{
+            display: flex;
+            flex-direction: column;
+        }
+      }
 }
 
 @mixin f-b-c-col {
