--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -85,13 +85,13 @@
                       <div class="trip-form__location">
                         <label for="location">
                           <span>Current Location</span>
-                          <input type="text" id="location" name="location" placeholder="enter your current locantion">
+                          <input type="text" id="location" name="location" placeholder="enter locantion">
                         </label>
                       </div>
                       <div class="trip-form__destination">
                         <label for="destination">
                           <span>Destination</span>
-                          <input type="text" id="destination" name="destination" placeholder="enter name of country you want travel">
+                          <input type="text" id="destination" name="destination" placeholder="enter country/city">
                         </label>
                       </div>
                   </div>
