--- a/src/client/styles/content.scss
+++ b/src/client/styles/content.scss
@@ -244,25 +244,30 @@ input {
 //////////small mobile/////////////
 @media(max-width:374px){
     input{
-        width: 170px;
+        width: 220px;
     }
     .trip-form__row{
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
+        @include f-i-col; 
     }
   }
   //////////large mobile/////////////
-  @media(min-width:375px)and(max-width:465px){
+  @media(min-width:375px)and(max-width:424px){
     input{
         width: 300px;
     }
     .trip-form__row{
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
+        @include f-i-col; 
     }
 }
+@media(min-width:425px)and(max-width:465px){
+    input{
+        width: 350px;
+    }
+    .trip-form__row{
+        @include f-i-col; 
+    }
+}
+
 
 ///////////SMALL TABLET//////////////
 @media(min-width:466px)and(max-width:517px){
