--- a/src/client/styles/lib/lib.scss
+++ b/src/client/styles/lib/lib.scss
@@ -31,6 +31,12 @@
     flex-direction: column;
 }
 
+@mixin f-i-col {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+}
+
 @keyframes errorBlock{
     0% {
         opacity: 0;
